--- a/Mid_Lab.ipynb
+++ b/Mid_Lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPavGvqzdPXh1gk3Mt2wofT",
+      "authorship_tag": "ABX9TyNggRKMbnKX1FqHWco3g/7/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,18 +50,14 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "from collections import deque\n",
         "\n",
         "def is_valid_state(m_left, c_left):\n",
         "    m_right, c_right = 3 - m_left, 3 - c_left\n",
         "    if (m_left < 0 or c_left < 0 or m_right < 0 or c_right < 0):\n",
         "        return False\n",
-        "    if (m_left > 0 and m_left < c_left):  # cannibals outnumber missionaries\n",
-        "        return False\n",
-        "    if (m_right > 0 and m_right < c_right):\n",
-        "        return False\n",
+        "    if (m_left > 0 and m_left < c_left): return False\n",
+        "    if (m_right > 0 and m_right < c_right): return False\n",
         "    return True\n",
         "\n",
         "def get_successors(state):\n",
@@ -89,13 +85,13 @@
         "            continue\n",
         "        visited.add(state)\n",
         "        if state == goal:\n",
-        "            print(\" BFS Solution Found:\\n\")\n",
+        "            print(\"BFS Solution Found:\\n\")\n",
         "            for i,s in enumerate(path): print(f\"Step {i}: {s}\")\n",
-        "            return path\n",
+        "            return  # <-- Stops here, no repetition\n",
         "        for next_state in get_successors(state):\n",
         "            queue.append((next_state, path+[next_state]))\n",
         "\n",
-        "    print(\" No BFS solution found.\")\n",
+        "    print(\"No BFS solution found.\")\n",
         "\n",
         "bfs()\n"
       ],
@@ -104,15 +100,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wMaypfzVe-g-",
-        "outputId": "fe6afd7c-a024-4572-83f6-7cbc5b0e885c"
+        "outputId": "d89e3a4b-0b8e-4017-d368-a051b7e9bd9d"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ BFS Solution Found:\n",
+            "BFS Solution Found:\n",
             "\n",
             "Step 0: (3, 3, 'left')\n",
             "Step 1: (3, 1, 'right')\n",
@@ -127,27 +123,6 @@
             "Step 10: (1, 1, 'left')\n",
             "Step 11: (0, 0, 'right')\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[(3, 3, 'left'),\n",
-              " (3, 1, 'right'),\n",
-              " (3, 2, 'left'),\n",
-              " (3, 0, 'right'),\n",
-              " (3, 1, 'left'),\n",
-              " (1, 1, 'right'),\n",
-              " (2, 2, 'left'),\n",
-              " (0, 2, 'right'),\n",
-              " (0, 3, 'left'),\n",
-              " (0, 1, 'right'),\n",
-              " (1, 1, 'left'),\n",
-              " (0, 0, 'right')]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
         }
       ]
     },
@@ -163,8 +138,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "def is_valid_state(m_left, c_left):\n",
         "    m_right, c_right = 3 - m_left, 3 - c_left\n",
         "    if (m_left < 0 or c_left < 0 or m_right < 0 or c_right < 0):\n",
@@ -175,14 +148,14 @@
         "\n",
         "def get_successors(state):\n",
         "    m_left, c_left, boat = state\n",
-        "    successors = []\n",
-        "    moves = [(1,0),(2,0),(0,1),(0,2),(1,1)]\n",
+        "    successors=[]\n",
+        "    moves=[(1,0),(2,0),(0,1),(0,2),(1,1)]\n",
         "    for m,c in moves:\n",
-        "        if boat == 'left':\n",
-        "            new_state = (m_left - m, c_left - c, 'right')\n",
+        "        if boat=='left':\n",
+        "            new_state=(m_left-m,c_left-c,'right')\n",
         "        else:\n",
-        "            new_state = (m_left + m, c_left + c, 'left')\n",
-        "        if is_valid_state(new_state[0], new_state[1]):\n",
+        "            new_state=(m_left+m,c_left+c,'left')\n",
+        "        if is_valid_state(new_state[0],new_state[1]):\n",
         "            successors.append(new_state)\n",
         "    return successors\n",
         "\n",
@@ -200,7 +173,7 @@
         "        if state==goal:\n",
         "            print(\"DFS Solution Found:\\n\")\n",
         "            for i,s in enumerate(path): print(f\"Step {i}: {s}\")\n",
-        "            return path\n",
+        "            return  # <-- Stops here\n",
         "        for next_state in get_successors(state):\n",
         "            stack.append((next_state,path+[next_state]))\n",
         "    print(\"No DFS solution found.\")\n",
@@ -212,15 +185,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_0pXpi3KfFvu",
-        "outputId": "5aca771f-1ddf-4350-ca24-42cfd967ce20"
+        "outputId": "4b80c40b-ffaf-479d-9a34-4da3a03d1c93"
       },
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ DFS Solution Found:\n",
+            "DFS Solution Found:\n",
             "\n",
             "Step 0: (3, 3, 'left')\n",
             "Step 1: (2, 2, 'right')\n",
@@ -235,27 +208,6 @@
             "Step 10: (0, 2, 'left')\n",
             "Step 11: (0, 0, 'right')\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[(3, 3, 'left'),\n",
-              " (2, 2, 'right'),\n",
-              " (3, 2, 'left'),\n",
-              " (3, 0, 'right'),\n",
-              " (3, 1, 'left'),\n",
-              " (1, 1, 'right'),\n",
-              " (2, 2, 'left'),\n",
-              " (0, 2, 'right'),\n",
-              " (0, 3, 'left'),\n",
-              " (0, 1, 'right'),\n",
-              " (0, 2, 'left'),\n",
-              " (0, 0, 'right')]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
         }
       ]
     },
@@ -271,8 +223,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "import heapq\n",
         "\n",
         "def is_valid_state(m_left, c_left):\n",
@@ -297,9 +247,8 @@
         "    return successors\n",
         "\n",
         "def heuristic(state):\n",
-        "    # number of people still on the left side\n",
         "    m_left, c_left, _ = state\n",
-        "    return m_left + c_left\n",
+        "    return m_left + c_left  # number of people left on left side\n",
         "\n",
         "def a_star():\n",
         "    start=(3,3,'left')\n",
@@ -314,9 +263,9 @@
         "            continue\n",
         "        visited.add(state)\n",
         "        if state==goal:\n",
-        "            print(\"A* Solution Found:\\n\")\n",
+        "            print(\" A* Solution Found:\\n\")\n",
         "            for i,s in enumerate(path): print(f\"Step {i}: {s}\")\n",
-        "            return path\n",
+        "            return  # <-- Stops here\n",
         "        for next_state in get_successors(state):\n",
         "            g=len(path)\n",
         "            h=heuristic(next_state)\n",
@@ -331,15 +280,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U3reO-GRfNld",
-        "outputId": "59e75a9d-b205-4a2c-ceb7-5484de1b0131"
+        "outputId": "75a90b03-83ae-4bf0-d3c6-8184317f109a"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A* Solution Found:\n",
+            " A* Solution Found:\n",
             "\n",
             "Step 0: (3, 3, 'left')\n",
             "Step 1: (2, 2, 'right')\n",
@@ -354,27 +303,6 @@
             "Step 10: (0, 2, 'left')\n",
             "Step 11: (0, 0, 'right')\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[(3, 3, 'left'),\n",
-              " (2, 2, 'right'),\n",
-              " (3, 2, 'left'),\n",
-              " (3, 0, 'right'),\n",
-              " (3, 1, 'left'),\n",
-              " (1, 1, 'right'),\n",
-              " (2, 2, 'left'),\n",
-              " (0, 2, 'right'),\n",
-              " (0, 3, 'left'),\n",
-              " (0, 1, 'right'),\n",
-              " (0, 2, 'left'),\n",
-              " (0, 0, 'right')]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
         }
       ]
     }
